tests/src/frontend/typechecking/invalid/invalid_tparam_match_2.sk
class C<T>(value: T)

fun getMaxTimeFromFilter<V>(x: C<V>): Nullable<Int> {
  x match {
  | C(0) -> Null()
  }
}
